fixing formatting issues with text overflow. changing materialize css classes on hero text and hero image

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -41,6 +41,7 @@ button{
 
 h2 {
 	font-family: 'Shadows Into Light', cursive;
+    margin-top:2px;
 }
 
 
@@ -155,10 +156,8 @@ a {
 /* Place text in the middle of the image */
 
 .hero-text {
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	text-align: center; 
+	/*position: absolute; */
+	
 	color: #9CADBC;
-}
+} 
